# rsyncer

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-package.yml  release.yml
rsyncer/: __init__.py  exceptions.py  rsync.py  utils.py
tests/: test_rsync.py
